TSFF-3050: Nye medlemskapsregler for forutgående medlemskapsvilkår (#1603)
### Behov / Bakgrunn

Tilpasser ung-sak til k9-formats nye `Medlemskap`-kontrakt for
aktivitetspenger (TSFF-3050): søker skal oppgi
`harBoddINorge`/`harJobbetINorge`/`harJobbetUtenforNorge` per periode og
`harJobbetIPerioden`/`utenlandskNasjonalId` per utenlandsopphold. I
tillegg skal vilkårsvurdering steget av forutgående medlemskap ikke
sjekk om utenlandsoppholdet er i EØS. Det skal opprettes aksjonspunkt
hvis de må oppgi utenlandsopphold.

### Løsning

- Rename fra bosted til utenlandsopphold
- Utvidet grunnlag med flagg fra søknad og nye felter fra
utenlandsopphold
- Validering av grunnlaget speiler k9-formats `@AssertTrue`-regler.

**REST-kontrakt**
- `MedlemskapsPeriodeDto` erstattet med `MedlemskapDto` (én per
behandling) + `UtenlandsoppholdDto` (én per opphold).
- `harTrygdeavtale` fjernet fra DTO-en. 

**Vilkårsvurdering**
- `ForutgåendeMedlemskapsvilkårSteg` bygger nå på
`VilkårVurderingSteg`-basisklassen (samme mønster som
bistands-/aktivitets-/bosted-vilkår), som fjerner duplisert
filtrerings-/tidslinjelogikk.
- Vurderingen sjekker nå kun om opphold er i Norge eller ikke — opphold
utenfor Norge gir aksjonspunkt for manuell vurdering.
- `utenlandskNasjonalId` maskeres før den lagres i `regelInput` for
aksjonspunktet.

### Andre endringer

- Oppdatert `.github/skills/vilkaar-med-grunnlag-og-varsling/SKILL.md` —
IKKE_RELEVANT-eksempelet viste et utdatert manuelt filtreringsmønster;
rettet til å vise `extends VilkårVurderingSteg`.

---

### Sjekkliste for godkjenner

- [ ] Ingen uhensiktsmessig spesialbehandling av saker (hardkodede
aktørId-er, saksnumre, org.nr som styrer forretningslogikk)
- [ ] Flyway-migrasjoner er vurdert (destruktive endringer, korrekt
versjonering, påvirkning på økonomiske data)
- [ ] Sporbarhet: lenke til Jira, Slack-tråd, eller en tydelig
beskrivelse av **hvorfor** endringen gjøres

Relatert: navikt/k9-verdikjede#1884

---------

Signed-off-by: Qadeer Khan <q